--- a/reactDataGrid/package.json
+++ b/reactDataGrid/package.json
@@ -14,28 +14,30 @@
     "react-addons-pure-render-mixin": "^15.0.0"
   },
   "devDependencies": {
-    "css-loader": "^0.26.1",
-    "webpack": "^1.14.0",
-    "webpack-hot-middleware": "^2.10.0",
-    "url-loader": "^0.5.7",
-    "file-loader": "^0.8.5",
-    "style-loader": "^0.13.0",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "json-loader": "^0.5.4",
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-plugin-transform-decorators-legacy": "^1.3.2",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.26.1",
     "expose-loader": "^0.7.1",
-    "react-transform-hmr": "^1.0.1",
-    "react-transform-catch-errors": "^1.0.0",
-    "redbox-react": "^1.2.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.26.0",
+    "html-webpack-template": "^6.0.1",
+    "json-loader": "^0.5.4",
+    "less": "^2.3.1",
     "less-loader": "^2.2.2",
-    "less": "^2.3.1"
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.2.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
