--- a/reactDataGrid/package.json
+++ b/reactDataGrid/package.json
@@ -10,8 +10,8 @@
     "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.0.0"
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel": "^6.3.26",
