--- a/reactDataGrid/package.json
+++ b/reactDataGrid/package.json
@@ -12,7 +12,8 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel": "^6.3.26",
